--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start-prod": "yarn -s tsc && node dist/index.js",
+    "start-prod": "node dist/index.js",
     "tsc": "tsc",
     "postinstall": "yarn -s tsc"
   },
