--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bn.js": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
