--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,5 @@ publish = "build/"
 command = "CI= yarn build"
 
 [build.environment]
-REACT_APP_API_BASE_URL = "https://when-is-the-merge.herokuapp.com"
+REACT_APP_API_BASE_URL = "https://d18d4gacnqj44x.cloudfront.net"
 REACT_APP_GA_TRACKING_ID = "UA-238583477-1"
