--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "bn.js": "^5.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "lru-cache": "^7.14.0"
   }
 }
